--- a/src/app/producto/lista-producto.component.html
+++ b/src/app/producto/lista-producto.component.html
@@ -4,6 +4,7 @@
         <th scope="col">Id</th>
         <th scope="col">Nombre</th>
         <th scope="col">Precio</th>
+        <th scope="col">Cantidad</th>
         <th scope="col">Ver</th>
         <th scope="col">Editar</th>
         <th scope="col">Borrar</th>
@@ -14,6 +15,7 @@
         <td>{{producto.id}}</td>
         <td>{{producto.nombre}}</td>
         <td>$ {{producto.precio}}</td>
+        <td>{{producto.cantidad}}</td>
         <td><button class="btn btn-outline-primary" routerLink="/detalle/{{producto.id}}"><i class="far fa-eye"></i> Ver</button></td>
         <td><button class="btn btn-outline-warning" routerLink="/editar/{{producto.id}}"><i class="far fa-edit"></i> Editar</button></td>
         <td><button class="btn btn-outline-danger" (click)="borrar(producto.id)"><i class="far fa-trash-alt"></i> Eliminar</button></td>
