--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -1,19 +1,3 @@
-<nav class="navbar navbar-expand-lg navbar-dark bg-dark">
-  <a class="navbar-brand" href="#">Electrodomésticos de Antioquia</a>
-  <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarNav" aria-controls="navbarNav" aria-expanded="false" aria-label="Toggle navigation">
-    <span class="navbar-toggler-icon"></span>
-  </button>
-  <div class="collapse navbar-collapse" id="navbarNav">
-    <ul class="navbar-nav ml-auto">
-     
-      <li class="nav-item">
-        <a class="nav-link" routerLink="/"><i class="far fa-list-alt"></i>Lista</a>
-      </li>
-      <li class="nav-item">
-        <a class="nav-link"  routerLink="/nuevo"><i class="fas fa-plus-circle"></i> Nuevo Producto</a>
-      </li>
-      
-    </ul>
-  </div>
-</nav>
+<div class="page-container">
 <router-outlet></router-outlet>
+</div>
