--- a/src/app/producto/detalle-producto.component.html
+++ b/src/app/producto/detalle-producto.component.html
@@ -1,3 +1,4 @@
+<app-menu></app-menu>
 <div class="conteiner">
     <div class="row mt-5" *ngIf = "producto">
         <div class="col-md-4 mx-auto">
@@ -8,7 +9,7 @@
                 <ul class="list-group list-group-flush">
                   <li class="list-group-item"><b>ID: </b>{{producto.id}}</li>
                   <li class="list-group-item"><b>Ean: </b>{{producto.ean}}</li>
-                  <li class="list-group-item"><b>Proveedor: </b>{{producto.idproveedor}}</li>
+                  <li class="list-group-item"><b>Proveedor: </b>{{producto.proveedor.nombre}}</li>
                   <li class="list-group-item"><b>Producto: </b>{{producto.nombre}}</li>
                   <li class="list-group-item"><b>Cantidad: </b>{{producto.cantidad}}</li>
                   <li class="list-group-item"><b>Valor unitario: </b>$ {{producto.precio}}</li>
@@ -18,7 +19,7 @@
                 </ul>
                 <div class="card-footer">
                     <div class="d-grid gap-2">
-                            <button class="btn btn-outline-primary btn-block" (click)="volver()"><i class="fas fa-arrow-alt-circle-left"></i> Volver</button>
+                            <button class="btn btn-outline-primary btn-block rounded-pill" (click)="volver()"><i class="fas fa-arrow-alt-circle-left"></i> Volver</button>
                     </div>
                 </div>
               </div>
