--- a/src/app/producto/editar-producto.component.html
+++ b/src/app/producto/editar-producto.component.html
@@ -1,3 +1,4 @@
+<app-menu></app-menu>
 <div class="container" *ngIf="producto">
     <div class="row mt-5">
         <div class="col-md-4 mx-auto">
@@ -17,13 +18,8 @@
                     <input type="number" class="form-control" id="cantidad" name="cantidad"
                     [(ngModel)]="producto.cantidad" required>
                 </div>
-                <div class="form-group mt-3">
-                    <label for="idproveedor">Proveedor</label>
-                    <input type="number" class="form-control" id="idproveedor" name="idproveedor"
-                    [(ngModel)]="producto.idproveedor" required>
-                </div>
                 <div class="d-grid gap-2 mt-3">
-                    <button class="btn btn-outline-success btn-block" [disabled]="!f.valid">Actualizar</button> 
+                    <button class="btn btn-outline-primary btn-block rounded-pill" [disabled]="!f.valid">Actualizar</button> 
                 </div>
             </form>
         </div>
