--- a/src/app/producto/lista-producto.component.html
+++ b/src/app/producto/lista-producto.component.html
@@ -1,3 +1,5 @@
+<app-menu></app-menu>
+<div class="container">
 <table class="table table-dark">
     <thead>
       <tr>
@@ -6,8 +8,8 @@
         <th scope="col">Precio</th>
         <th scope="col">Cantidad</th>
         <th scope="col">Ver</th>
-        <th scope="col">Editar</th>
-        <th scope="col">Borrar</th>
+        <th scope="col" *ngIf="isAdmin">Editar</th>
+        <th scope="col" *ngIf="isAdmin">Borrar</th>
       </tr>
     </thead>
     <tbody>
@@ -16,9 +18,14 @@
         <td>{{producto.nombre}}</td>
         <td>$ {{producto.precio}}</td>
         <td>{{producto.cantidad}}</td>
-        <td><button class="btn btn-outline-primary" routerLink="/detalle/{{producto.id}}"><i class="far fa-eye"></i> Ver</button></td>
-        <td><button class="btn btn-outline-warning" routerLink="/editar/{{producto.id}}"><i class="far fa-edit"></i> Editar</button></td>
-        <td><button class="btn btn-outline-danger" (click)="borrar(producto.id)"><i class="far fa-trash-alt"></i> Eliminar</button></td>
+        <td><button class="btn btn-outline-info rounded-pill" routerLink="/detalle/{{producto.id}}"><i class="far fa-eye"></i> Ver</button></td>
+        <td *ngIf="isAdmin"><button class="btn btn-outline-info rounded-pill" routerLink="/editar/{{producto.id}}"><i class="far fa-edit"></i> Editar</button></td>
+        <td *ngIf="isAdmin"><button class="btn btn-outline-info rounded-pill" (click)="borrar(producto.id)"><i class="far fa-trash-alt"></i> Eliminar</button></td>
       </tr>
     </tbody>
   </table>
+  <div class="mt-3" *ngIf="isAdmin">
+    <button class="btn btn-outline-info btn-lg rounded-pill" routerLink="/nuevo">
+      <i class="fas fa-plus-circle"></i> Nuevo Producto</button>
+  </div>
+</div>
